--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/hello-spring
     username: root
-    password: **
+    password: @@
 
   jpa:
     hibernate:
